Update Firebase integration with fallback

--- a/public/index.html
+++ b/public/index.html
@@ -418,17 +418,17 @@
         let products = [
             {
                 id: 1,
-                name: "เสื้อยืดคอกลม",
-                price: 299,
-                size: "S, M, L, XL",
-                weight: 200
+                name: "Mice",
+                price: 8,
+                size: "3XS",
+                weight: 2
             },
             {
                 id: 2,
-                name: "กางเกงยีนส์",
-                price: 590,
-                size: "28-36",
-                weight: 500
+                name: "Mice",
+                price: 11,
+                size: "2XS",
+                weight: 5
             }
         ];
 
